--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				  <div class="col-md-6">
 					  <div class="about-image mb-50px-sm p-relative">
 						  <img alt="img" src="images/mepic.jpg">
-						  <a class="p-absolute" href="https://www.https://www.youtube.com/watch?v=8Nx6wxlexag" data-lity>
+						  <a class="p-absolute" href="https://youtu.be/vU3fHbW7Lqs" data-lity>
 							  <i class="fa fa-play p-relative fs-20 bg-blue color-fff transition-2 pl-3px radius-50 text-center color-blue-hvr bg-fff-hvr"></i>
 						  </a>
 					  </div>
