added interlinking on pacman page

--- a/PACMANpagev1.html
+++ b/PACMANpagev1.html
@@ -126,6 +126,10 @@
 						  <p class="mb-10px">This exercise was to understand arrays. The task was to create a button that created a moving pacman arouns the screen everytime it was pressed</p>
 							  </div>
 						  </form>
+			  <div class="mt-4 d-flex justify-content-center">
+                        <a class="d-inline-block btn btn-secondary mr-3" href="/index.html" role="button">Back</a>
+                           <a class="btn btn-primary" href="https://github.com/fhojas88/PacMan-v1.git" role="button">View Code</a>
+                           </div>
 					  </div>
 				  </div>  
 			  </div>
