added interlinking for eyeball

--- a/Eyeballv1.html
+++ b/Eyeballv1.html
@@ -69,6 +69,10 @@
 						  <p class="mb-10px">This execise was to understand DOM and Event elements. The task here was to create an eye element and have that follow the movements of the mouse in real time using mouse events</p>
 							  </div>
 						  </form>
+				   <div class="mt-4 d-flex justify-content-center">
+                        <a class="d-inline-block btn btn-secondary mr-3" href="/index.html" role="button">Back</a>
+                           <a class="btn btn-primary" href="https://github.com/fhojas88/EyeballRepo.git" role="button">View Code</a>
+                           </div>
 					  </div>
 				  </div>  
 			  </div>
