--- a/PACMANpagev1.html
+++ b/PACMANpagev1.html
@@ -127,7 +127,7 @@
 							  </div>
 						  </form>
 			  <div class="mt-4 d-flex justify-content-center">
-                        <a class="d-inline-block btn btn-secondary mr-3" href="/" role="button">Back</a>
+                        <a class="d-inline-block btn btn-secondary mr-3" href="/MIT-Felix-Hojas-Portfolio" role="button">Back</a>
                            <a class="btn btn-primary" href="https://github.com/fhojas88/PacMan-v1.git" role="button">View Code</a>
                            </div>
 					  </div>
