--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 							  <img alt="blog" src="images/Pacman.jpg" class="transition-4">
 						  </div>
 						  <div class="p-20px bg-fff">
-							  <h5 class="fw-700 mb-15px"><a href="#" class="color-333 color-blue-hvr">Pacman Exercise</a></h5> 
+							  <h5 class="fw-700 mb-15px">Pacman Exercise</h5> 
 							  <p class="mb-20px color-555">This exercise was to understand arrays. The task was to create a button that created a moving pacman arouns the screen everytime it was pressed.</p>
 							  <a href="PACMANpagev1.html" class="d-inline-block mb-20px p-relative fw-600 color-333 color-blue-hvr"> See Project <i class="fa fa-long-arrow-right"></i> </a>
 						  </div>
