card heading fixed

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 							  <img alt="blog" src="images/eyeball.jfif" class="transition-4">
 						  </div>
 						  <div class="p-20px bg-fff">
-							  <h5 class="fw-700 mb-15px"><a href="#" class="color-333 color-blue-hvr">Eyeball Exercise</a></h5> 
+							  <h5 class="fw-700 mb-15px">Eyeball Exercise</h5> 
 							  <p class="mb-20px color-555">This execise was to understand DOM and Event elements. The task here was to create an eye element and have that follow the movements of the mouse in real time using mouse events.</p>
 							  <a href="Eyeballv1.html" class="d-inline-block mb-20px p-relative fw-600 color-333 color-blue-hvr"> See Project <i class="fa fa-long-arrow-right"></i> </a>
 							</div>
@@ -145,7 +145,7 @@
 								<img alt="blog" src="images/realbus.jfif" class="transition-4">
 							</div>
 							<div class="p-20px bg-fff">
-								<h5 class="fw-700 mb-15px"><a href="#" class="color-333 color-blue-hvr">Bus Tracker Exercise</a></h5> 
+								<h5 class="fw-700 mb-15px">Bus Tracker Exercise</h5> 
 								<p class="mb-20px color-555">The exercise was to undestand Asychronous code and Css Grids.The Task here is animate and track data on maps with live data. </p>
 								<a href="Bus Tracker v1.html" class="d-inline-block mb-20px p-relative fw-600 color-333 color-blue-hvr"> See Project <i class="fa fa-long-arrow-right"></i> </a>
 							
